apps/kubercoins/hasher-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hasher-ingress
spec:
  rules:
  - host: hasher.192.168.33.101.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hasher
          servicePort: 80
